# match_catch

catch_control/: CMakeLists.txt  catch_bottle.launch  join_two_trajectory.launch  joined_UR5e_gripper.launch  mymoveit_node.launch  package.xml  record_servoj_sim1_real_tracking.txt
catch_control/Matlab/: load_data.m
catch_control/config/: bottle.yaml  catch.rviz  catch_bottle.rviz  hand.yaml  moveit.rviz
catch_control/matlab_code/angular_vel_filter/: copy_file_to_clionproject.m  data_global.sldd  decrease_curve_design.m  end_point_filter.slx  init.m
catch_control/matlab_code/force_interaction/: copy_file_to_clionproject.m  force_interaction.sldd  force_interaction.slx  force_interaction_sim.slx  free_teaching.sldd  init.m  load_F.m  test_sim.m
catch_control/record_servoj_sim/: force_test_11.txt  force_test_22.txt  force_test_33.txt  force_test_44.txt  force_test_55.txt
catch_control/record_servoj_sim/dynamic_/: 10_real_tracking.txt  11_real_tracking.txt  12_real_tracking.txt  13_real_tracking.txt  1_real_tracking.txt  2_real_tracking.txt  3_real_tracking.txt  4_real_tracking.txt  5_real_tracking.txt  6_real_tracking.txt  7_real_tracking.txt  8_real_tracking.txt  9_real_tracking.txt
catch_control/record_servoj_sim/fix_end_250_0.004/: -10_real_tracking.txt  -11_real_tracking.txt  -12_real_tracking.txt  -13_real_tracking.txt  -14_real_tracking.txt  -15_real_tracking.txt  -16_real_tracking.txt  -17_real_tracking.txt  -18_real_tracking.txt  -19_real_tracking.txt  -1_real_tracking.txt  -20_real_tracking.txt  -21_real_tracking.txt  -22_real_tracking.txt  -23_real_tracking.txt  -24_real_tracking.txt  -25_real_tracking.txt  -26_real_tracking.txt  -27_real_tracking.txt  -28_real_tracking.txt  -29_real_tracking.txt  -2_real_tracking.txt  -30_real_tracking.txt  -31_real_tracking.txt  -32_real_tracking.txt  -33_real_tracking.txt  -34_real_tracking.txt  -35_real_tracking.txt  -36_real_tracking.txt  -37_real_tracking.txt  -38_real_tracking.txt  -39_real_tracking.txt  -3_real_tracking.txt  -40_real_tracking.txt  -41_real_tracking.txt  -42_real_tracking.txt  -43_real_tracking.txt  -44_real_tracking.txt  -45_real_tracking.txt  -46_real_tracking.txt  (+60 more)
catch_control/record_servoj_sim/fix_end_250_0.004_2/: -10_real_tracking.txt  -11_real_tracking.txt  -12_real_tracking.txt  -13_real_tracking.txt  -14_real_tracking.txt  -15_real_tracking.txt  -16_real_tracking.txt  -17_real_tracking.txt  -18_real_tracking.txt  -19_real_tracking.txt  -1_real_tracking.txt  -20_real_tracking.txt  -21_real_tracking.txt  -22_real_tracking.txt  -23_real_tracking.txt  -24_real_tracking.txt  -25_real_tracking.txt  -26_real_tracking.txt  -27_real_tracking.txt  -28_real_tracking.txt  -29_real_tracking.txt  -2_real_tracking.txt  -30_real_tracking.txt  -31_real_tracking.txt  -32_real_tracking.txt  -33_real_tracking.txt  -34_real_tracking.txt  -35_real_tracking.txt  -36_real_tracking.txt  -37_real_tracking.txt  -38_real_tracking.txt  -39_real_tracking.txt  -3_real_tracking.txt  -40_real_tracking.txt  -41_real_tracking.txt  -42_real_tracking.txt  -43_real_tracking.txt  -44_real_tracking.txt  -45_real_tracking.txt  -46_real_tracking.txt  (+60 more)
catch_control/record_servoj_sim/fix_end_250_0.004_3/: -10_real_tracking.txt  -11_real_tracking.txt  -12_real_tracking.txt  -13_real_tracking.txt  -14_real_tracking.txt  -15_real_tracking.txt  -16_real_tracking.txt  -17_real_tracking.txt  -18_real_tracking.txt  -19_real_tracking.txt  -1_real_tracking.txt  -20_real_tracking.txt  -21_real_tracking.txt  -22_real_tracking.txt  -23_real_tracking.txt  -24_real_tracking.txt  -25_real_tracking.txt  -26_real_tracking.txt  -27_real_tracking.txt  -28_real_tracking.txt  -29_real_tracking.txt  -2_real_tracking.txt  -30_real_tracking.txt  -31_real_tracking.txt  -32_real_tracking.txt  -33_real_tracking.txt  -34_real_tracking.txt  -35_real_tracking.txt  -36_real_tracking.txt  -37_real_tracking.txt  -38_real_tracking.txt  -39_real_tracking.txt  -3_real_tracking.txt  -40_real_tracking.txt  -41_real_tracking.txt  -42_real_tracking.txt  -43_real_tracking.txt  -44_real_tracking.txt  -45_real_tracking.txt  -46_real_tracking.txt  (+60 more)
catch_control/record_servoj_sim/fix_end_250_0.004_4/: -10_real_tracking.txt  -11_real_tracking.txt  -12_real_tracking.txt  -13_real_tracking.txt  -14_real_tracking.txt  -15_real_tracking.txt  -16_real_tracking.txt  -17_real_tracking.txt  -18_real_tracking.txt  -19_real_tracking.txt  -1_real_tracking.txt  -20_real_tracking.txt  -21_real_tracking.txt  -22_real_tracking.txt  -23_real_tracking.txt  -24_real_tracking.txt  -25_real_tracking.txt  -26_real_tracking.txt  -27_real_tracking.txt  -28_real_tracking.txt  -29_real_tracking.txt  -2_real_tracking.txt  -30_real_tracking.txt  -31_real_tracking.txt  -32_real_tracking.txt  -33_real_tracking.txt  -34_real_tracking.txt  -35_real_tracking.txt  -36_real_tracking.txt  -37_real_tracking.txt  -38_real_tracking.txt  -39_real_tracking.txt  -3_real_tracking.txt  -40_real_tracking.txt  -41_real_tracking.txt  -42_real_tracking.txt  -43_real_tracking.txt  -44_real_tracking.txt  -45_real_tracking.txt  -46_real_tracking.txt  (+60 more)
catch_control/record_servoj_sim/fix_end_500/: 10_real_tracking.txt  11_real_tracking.txt  1_real_tracking.txt  2_real_tracking.txt  3_real_tracking.txt  4_real_tracking.txt  5_real_tracking.txt  6_real_tracking.txt  7_real_tracking.txt  8_real_tracking.txt  9_real_tracking.txt
catch_control/record_servoj_sim/fix_end_500_0.002/: -10_real_tracking.txt  -11_real_tracking.txt  -12_real_tracking.txt  -13_real_tracking.txt  -14_real_tracking.txt  (+95 more)
catch_control/src/: HelloWorld.cpp  Serial.cpp  beifen  catch_begin.cpp  catch_bottle.cpp  catch_bottle.h  human_interact_demo.cpp  human_interact_demo.h  join_two_trajectory.cpp  join_two_trajectory.h  joint_state_maintain.cpp  joint_state_maintain.h  listener.cpp  match_demo.cpp  match_demo.h  moveit_demo.cpp  mymoveit.cpp  mymoveit.h  record_data_matlab.cpp  serialPort.cpp  serialport_cmd.cpp  test_tra.cpp
catch_control/urdf/: UR5e_robotiq.gv  ikfast61_manipulator.cpp  table.STL  table.urdf  ur5e_robot.urdf  ur5e_robot.urdf.xacro
(+215 files in other folders)
